updates to portfolio buttons added fixed card alignment

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+.navbar {
+    color: #7d6379;
+}
+
 body{
     color: #7d6379;
-
     line-height: 19px;
     font-family: 'Playfair Display', serif;
     font-size: 20px;
@@ -134,6 +137,10 @@ footer{
     margin-bottom: 53px;
 }
 
-.btn{
-    margin-left: 199px
+.btn {
+    margin-left: 90px;
+}
+
+#rock {
+    margin-left: 390px;
 }
